# collectors

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: alfred-vintage.yml  cot.yml  oil.yml  tests.yml  vrm.yml
collectors/cot/: __init__.py  config.yaml  consumer.py  derive.py  fetch_cot.py  markets.py  mockdata.py  register_catalog.py  run.py  to_datacore.py  verify_splice.py
collectors/oil/: config.yaml  fetch_cot.py  fetch_eia.py  fetch_portwatch.py  fetch_prices.py  mockdata.py  report.py  run.py  scoring.py  to_datacore.py
collectors/price/: __init__.py  backfill.py  config.yaml  consumer.py  fetch_prices.py  figi.py  identity.py  mockdata.py  reconcile.py  register_catalog.py  run.py  split_heal.py  to_datacore.py  verify_backfill.py  verify_identity.py
collectors/price/tests/: test_backfill.py  test_consumer.py  test_daily.py  test_identity.py  test_price.py  test_reconcile.py  test_split_heal.py  test_stamp.py  test_stock.py  test_stoxx.py
collectors/vrm/: INVENTORY.md  README.md  __init__.py  carry_forward.py  compute.py  config.yaml  fetch_alfred.py  fetch_bridge.py  fetch_fred.py  fetch_prices.py  manual_ism.py  mockdata.py  run.py  run_alfred.py  seed_ism_slot.py  to_datacore.py
collectors/vrm/tests/: test_weekly.py
docs/: index.html  state.json
